<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:clickable="false"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingStart="10dp"
     xmlns:tools="http://schemas.android.com/tools" tools:ignore="RtlSymmetry">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

       <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:orientation="vertical" >
                <TextView
                    android:id="@+id/list_item_moth_year_debt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/month_year_sample"
                    android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
                    android:textColor="@color/dark_gray"
                    android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout          
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end|top"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:background="@color/ssc_elfec_color"
            android:gravity="center" >
            <TextView
                android:id="@+id/debt_amount"
               	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/account_balance_sample"
	            android:textAppearance="@style/TextAppearance.CustomFont.Light"
	            android:textColor="@color/white"
	            android:textSize="18sp" />
            <LinearLayout 
                android:id="@+id/layout_decimal_debt"
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginLeft="5dp"
	            android:layout_marginStart="5dp" 
	            android:orientation="vertical">
                <TextView
                android:id="@+id/debt_amount_decimal"
               	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/decimal_balance_sample"
	            android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	            android:textColor="@color/white"
	            android:includeFontPadding="false"
	            android:padding="0dp"
	            android:background="@null"
	            android:textSize="12sp" />
                <View
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:background="@android:color/white" />
                <TextView
               	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/lbl_currency"
	            android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
	            android:textColor="@color/white"
	            android:includeFontPadding="false"
	            android:padding="0dp"
	            android:background="@null"
	            android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_debt_expiration_date"
            android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
            android:textColor="@color/dark_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/list_item_expiration_date_debt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/simple_date_sample"
            android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
            android:textColor="@color/dark_gray"
            android:textSize="15sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_receipt_number_date"
            android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
            android:textColor="@color/dark_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/list_item_receipt_number_debt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/nus_sample"
            android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
            android:textColor="@color/dark_gray"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
