<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/notification_item_background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:ignore="UseCompoundDrawables" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/account_mini_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/ssc_elfec_color"
            android:contentDescription="@string/account_img"
            android:padding="4dp"
            android:src="@drawable/account_mini" />

        <TextView
            android:id="@+id/row_account_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/account_sample"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
            android:textColor="@color/dark_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/row_nus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/ssc_elfec_color"
            android:contentDescription="@string/account_img"
            android:padding="4dp"
            android:src="@drawable/nus_mini" />

        <TextView
            android:id="@+id/row_nus_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/nus_sample"
            android:textAppearance="@style/TextAppearance.CustomFont.Semilight"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical|start"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/row_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_account_list_item_name"
            android:textColor="@color/dark_gray"
            android:textAppearance="@style/TextAppearance.CustomFont.Normal"
            android:textSize="13sp"
           />

        <TextView
            android:id="@+id/row_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/name_sample"
            android:textAppearance="@style/TextAppearance.CustomFont.Normal"
            android:textColor="@color/dark_gray"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>