<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Welcome" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35" >
        
        <TextView
        android:id="@+id/welcome_to_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textColor="@color/ssc_elfec_color"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_app"
        android:textAppearance="@style/TextAppearance.CustomFont.Title" 
        android:textSize="34sp" /> 

        <ImageView
            android:id="@+id/imgSSCLogo"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="28dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/logo_elfec_caption"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/lbl_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/imgSSCLogo"
            android:layout_toEndOf="@+id/imgSSCLogo"
            android:text="@string/app_title"
            android:layout_centerVertical="true"
            android:textSize="28sp"
            android:lineSpacingExtra="-8dp"
            android:paddingTop="20dp"
            android:textAppearance="@style/TextAppearance.CustomFont.Title" />

       
		
	</RelativeLayout>
	
    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:background="@color/ssc_elfec_color"
	        android:layout_weight="0.65" >
 <ImageView
            android:id="@+id/werwerer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo_elfec_caption"
            android:src="@drawable/logo_elfec" />
        <TextView
            android:id="@+id/rwerwerwet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/app_title"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.CustomFont.Title" />
		
	</RelativeLayout>

</LinearLayout>
