<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_top_margin"
    tools:context="com.elfec.ssc.view.ViewNotifications" >
<TextView
        android:id="@+id/notifications_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.CustomFont.Title" />
<RelativeLayout
    	android:id="@+id/outage_layout"  
    	android:layout_below="@+id/notifications_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true">
<CheckBox
        android:id="@+id/outage_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outage_group"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_marginTop="5dp"
		android:button="@android:color/transparent"
        android:background="@drawable/btn_expandable_background"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.CustomFont.Title" />
<TextView
        android:id="@+id/testeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"

        android:padding="5dp"
        android:clickable="true"
        android:onClick="deleteOutageNotifications"
        android:textAppearance="@style/TextAppearance.CustomFont.Title" />
</RelativeLayout>
<com.elfec.ssc.view.xlistview.XListView
        android:id="@+id/outage_listview"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:fastScrollEnabled="true"
        android:layout_below="@+id/outage_layout"
        android:layout_width="match_parent"/>
<CheckBox
        android:id="@+id/accounts_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts_group"
        android:gravity="center_vertical"
        android:layout_below="@+id/outage_listview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_expandable_background"
        android:button="@android:color/transparent"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.CustomFont.Title" />
 <com.elfec.ssc.view.xlistview.XListView
        android:id="@+id/accounts_listview"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:layout_below="@+id/accounts_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:fastScrollEnabled="true"
        android:layout_width="match_parent"/>
    
</RelativeLayout>
